# PythonWeb

./: .gitignore  README.md
Modul_01/: DB.json  hw_01.py  my_logger.py  test.drawio
Modul_02/: uml_diagramm.drawio
Modul_03/: Dockerfile  Pipfile  pyproject.toml
Modul_03/Testing/: Pipfile
Modul_03/Testing/docker/: Dockerfile  app.py
Modul_03/Testing/docker-django/: Dockerfile  docker-compose.yml
Modul_03/Testing/helpme_pack/: cleanfolder.py
Modul_03/Testing/poetry_app/: app.py  my_scripts.py  pyproject.toml
Modul_03/TimeZone/: .gitignore
Modul_03/TimeZone/src/: Dockerfile  docker-compose.yml  requirements.txt  wsgi.py
Modul_03/app/: cleanfolder.py  main.py  notebook.py  output.py  requirements.txt
Modul_03/docker/: Dockerfile  app.py  main.py  requirements.txt
Modul_03/docker-django/: Dockerfile  requirements.txt
Modul_03/helpme_pack/: main.py
Modul_04/: cleanfolder.py  file_parser.py  logger.py  normalize.py  pyproject.toml
Modul_04/tkinter/: data.txt  gui.py  win_log_pass.py
Modul_04/tkinter/mine_game/: mine_game.py
Modul_05/: main.py  pyproject.toml
Modul_06/: ReadMe.md  logger.py  main.py  pyproject.toml  register_extensions.py  requirements.txt
Modul_07/: pyproject.toml
Modul_07/HW_7/: app_settings.py  client.py  server.py
Modul_07/test_web/site/: index.html
Modul_08/: ddl_scripts.py  dml_scripts.py  hw8.sql  hw_db  pyproject.toml  selects.md
Modul_09/: ReadMe.md  alembic.ini  config.ini  main.py  pyproject.toml
Modul_09/migrate/versions/: 06c2e846bae8_update_tables3.py  195f526a34f1_update_tables9.py  287383f845ab_update_tables2.py  2d80e562a82b_update_tables4.py  462ba827ce1d_update_tables11.py  5482aa1cf6aa_update_tables7.py  8d1e8405e477_update_tables8.py  a58adf20e620_update_tables.py  d854c8b97c67_create_contact_table.py  e1da597ac42c_update_tables10.py  f725a3cecc46_update_tables5.py  fbe46c25fd70_update_tables6.py
Modul_09/src/: adressbook.py  db.py  dml.py  feed_fake_data.py  models.py
Modul_10/: pyproject.toml  redis_cache_example.py
Modul_10/HW/mongo_db_app/: ReadMe.md  main.py
Modul_10/HW/mongo_db_app/src/: adressbook.py  dml.py  feed_fake_data.py  models.py
Modul_10/HW/mongo_db_app/src/app/: adressbook.py
Modul_10/HW/redis_lru_cache/: redis_lru_cache.py
Modul_10/email_service/: mail.py  main.py  marketing_worker.py  models.py
Modul_10/mongo_atlas/: connect.py  main.py  models.py
Modul_10/mongo_docker/: mongo_docker.py
Modul_10/rabbitmq_docker/simple/: receiver.py  sender.py
Modul_10/rabbitmq_docker/tasks/: create_task.py
Modul_12/old_school_chat_AIOHTTP_WS/config/: config.yaml
Modul_13/: pyproject.toml
Modul_13/notes/noteapp/: urls.py  views.py
Modul_13/notes/noteapp/migrations/: 0001_initial.py
Modul_13/notes/noteapp/templates/noteapp/: detail.html  index.html  note.html  tag.html
Modul_13/notes/notes/: settings.py  urls.py
modul_11/flask_note_app/: app.py  db.py  models.py  mynotes.db
modul_11/flask_note_app/templates/: detail.html  note.html  tag.html
(+4 files in other folders)
