[tool.poetry]
name = "modul_04"
version = "0.1.0"
description = ""
authors = ["Vladyslav Babenko <96999713+vlad-bb@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "3.10.4"
auto-py-to-exe = "^2.21.1"
pyinstaller = "^5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
