[tool.poetry]
name = "modul_09"
version = "0.1.0"
description = ""
authors = ["Vladyslav Babenko <96999713+vlad-bb@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
phonenumbers = "^8.12.54"
alembic = "^1.8.1"
SQLAlchemy = "^1.4.40"
psycopg2-binary = "^2.9.3"
Faker = "^14.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
