[tool.poetry]
name = "modul_10"
version = "0.1.0"
description = ""
authors = ["Vladyslav Babenko <96999713+vlad-bb@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
redis = "^4.3.4"
redis-lru = "^0.1.2"
pymongo = {extras = ["snappy", "gssapi", "srv", "tls"], version = "^4.2.0"}
mongoengine = "^0.24.2"
pika = "^1.3.0"
Faker = "^14.2.0"
phonenumbers = "^8.12.55"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
