[tool.poetry]
name = "poetry_app"
version = "0.1.0"
description = "exchange USD"
authors = ["vlad-bb <96999713+vlad-bb@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
xmltodict = "^0.13.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
exchange = "my_scripts:get_exc"
